--- a/AngularApp/Templates/violations.html
+++ b/AngularApp/Templates/violations.html
@@ -1,3 +1,4 @@
+<div class="container">
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" ><img src=""></a>
@@ -13,6 +14,4 @@
         </div>
     </div>
 </nav>
-
-<h1>HOLA MUNDO</h1>
-<h1>{{newOne.name}}</h1>
+</div>
