--- a/AngularApp/Templates/university.html
+++ b/AngularApp/Templates/university.html
@@ -8,6 +8,12 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item ">
+                        <a href="#" class="nav-link">Students</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="#" class="nav-link">Career</a>
+                    </li>
+                    <li class="nav-item ">
                         <a href="#" class="nav-link">LogOut</a>
                     </li>
                 </ul>
