--- a/AngularApp/Templates/career.html
+++ b/AngularApp/Templates/career.html
@@ -1,23 +1,26 @@
 <div class="container">
-<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" ><img src=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a  class="nav-link" ></a>
-                </li>
-                <li class="nav-item active">
-                    <a  class="nav-link"></a>
-                </li>
-                <li class="nav-item ">
-                    <a href="#" class="nav-link">LogOut</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" ><img src=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item ">
+                        <a href="#!/university/students" class="nav-link">Students</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="#!/university/career" class="nav-link">Career</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="#!/university" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="#" class="nav-link">LogOut</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 </div>
