--- a/Content/css/MyCss/style.css
+++ b/Content/css/MyCss/style.css
@@ -52,6 +52,17 @@ body {
 }
 
 
+/* The starting CSS styles for the enter animation */
+.ngAnimation.ng-enter {
+	transition:1.0s linear all;
+	opacity:0;
+}
+
+/* The finishing CSS styles for the enter animation */
+.ngAnimation.ng-enter.ng-enter-active {
+	opacity:2;
+}
+
 
 
 
