--- a/AngularApp/Templates/university.html
+++ b/AngularApp/Templates/university.html
@@ -1,3 +1,4 @@
+<header data-ng-include="'AngularApp/Templates/globalHeader.html'"></header>
 <div class="container">
     <h2>Universities Available in our Country</h2>
     <p>This list represent the following Universities </p>
