--- a/AngularApp/Templates/students.html
+++ b/AngularApp/Templates/students.html
@@ -25,6 +25,7 @@
             <td class="text-center">
                 <i class="fas fa-pencil-alt" id="edit" data-ng-click="edit(x.User_ID)" ></i>
                 <i class="fas fa-trash-alt"  id="delete" data-ng-click="deleteStudent(x.User_ID)"></i>
+                <i class="fas fa-book" id="eye" data-ng-click="view(x.User_ID)" ></i>
             </td>
         </tr>
         </tbody>
