--- a/AngularApp/Templates/university.html
+++ b/AngularApp/Templates/university.html
@@ -19,9 +19,11 @@
             <td class="text-center">
                 <i class="fas fa-pencil-alt" id="edit" data-ng-click="edit(x.University_ID)" ></i>
                 <i class="fas fa-trash-alt"  id="delete" data-ng-click="deleteUniversity(x.University_ID)"></i>
+                <i class="fas fa-book" id="eye" data-ng-click="view(x.University_ID)" ></i>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
+
 
