--- a/Content/css/MyCss/style.css
+++ b/Content/css/MyCss/style.css
@@ -58,13 +58,17 @@ body {
 }
 
 #delete {
-	margin-right: 5%;
-	font-size:20px;color:cornflowerblue;
+	margin-right: 13%;
+	font-size:15px;color:cornflowerblue;
 }
 
 #edit {
-	margin-right: 5%;
-	font-size:20px;color:cornflowerblue;
+	margin-right: 13%;
+	font-size:15px;color:cornflowerblue;
+}
+#eye {
+	margin-right: 13%;
+	font-size:15px;color:cornflowerblue;
 }
 
 i:hover {
